tests/includes/valid/base.jute
module common.types {
    class Header {
        int version;
        long zxid;
    }

    class AuthInfo {
        int scheme;
        buffer data;
    }
}
