tests/includes/invalid/mod1.jute
module mod1 {
    class Duplicate {
        int a;
    }
}
